# qrb_ros_samples

./: CHANGELOG.md  LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/: actionlint.yaml
.github/workflows/: action-lint.yml  build-check-sdk.yaml  (+4 more)
agent/: README.md
ai_vision/sample_depth_estimation/: README.md  package.xml  setup.py
ai_vision/sample_depth_estimation/config/: config.yaml
ai_vision/sample_depth_estimation/launch/: launch_with_image_publisher.py  launch_with_qrb_ros_camera.py
ai_vision/sample_depth_estimation/sample_depth_estimation/: depth_estimation_node.py
ai_vision/sample_object_detection/: README.md  package.xml  setup.cfg  setup.py
ai_vision/sample_object_detection/config/: config.yaml
ai_vision/sample_object_detection/launch/: launch.py  launch_with_orbbec_camera.py
ai_vision/sample_object_detection/sample_object_detection/: image_converter_node.py
ai_vision/sample_resnet101/: README.md  package.xml  setup.cfg  setup.py
ai_vision/sample_resnet101/config/: config.yaml
ai_vision/sample_resnet101/install/: local_setup.sh  setup.sh
ai_vision/sample_resnet101/install/sample_resnet101_quantized/lib/sample_resnet101_quantized/: qrb_ros_resnet101  qrb_ros_resnet101.py  qrb_ros_resnet101_posprocess
ai_vision/sample_resnet101/install/sample_resnet101_quantized/share/sample_resnet101_quantized/: package.bash  package.dsv  package.sh
ai_vision/sample_resnet101/install/sample_resnet101_quantized/share/sample_resnet101_quantized/launch/: launch_with_orbbec_camera.py
ai_vision/sample_resnet101/launch/: launch_with_image_publisher.py  launch_with_qrb_ros_camera.py  launch_with_usbcam.py
ai_vision/sample_resnet101/log/: latest_build
ai_vision/sample_resnet101/sample_resnet101/: qrb_ros_resnet101.py  qrb_ros_resnet101_posprocess.py
ai_vision/sample_resnet101/sample_resnet101_quantized/: qrb_ros_resnet101.py  qrb_ros_resnet101_posprocess.py
config/: config.yaml  objects.yaml  rml_63_gripper_ros2_control.xacro
debian/: changelog  control  copyright  ros-jazzy-sample-depth-estimation.postinst  ros-jazzy-sample-face-detection.postinst  ros-jazzy-sample-hand-detection.postinst  ros-jazzy-sample-hrnet-pose-estimation.postinst  ros-jazzy-sample-resnet101.postinst  rules
include/: common.h  controller.h
launch/: launch_with_image_publisher.py  launch_with_orbbec_camera.py  launch_with_qrb_ros_camera.py  launch_with_usbcam.py  sample_apriltag.launch.py  yolo_detectcion.launch.py
platform/ocr_service/ocr_msg/: CMakeLists.txt  package.xml
platform/sample_ocr/ocr_ros2node/: package.xml  setup.cfg  setup.py
platform/sample_ocr/ocr_ros2node/ocr_service/: ocr_client.py  ocr_service.py  ocr_testnode.py
qirp-sdk/: README.md  qirp-setup.sh
qirp-sdk-desktop/: qirp-setup.sh
resource/: simulation_sample_pick_and_place
robotics/sample_apriltag/: CMakeLists.txt  README.md  package.xml
robotics/sample_apriltag/config/: realsense_depth_435i_1920x1080.yaml  realsense_depth_435i_640x480.yaml  tags_41h12.yaml
robotics/sample_apriltag/install/: local_setup.bash  local_setup.sh  setup.bash  setup.sh
robotics/sample_apriltag/install/sample_apriltag/share/sample_apriltag/: local_setup.sh  package.bash  package.dsv  package.sh
robotics/sample_apriltag/install/sample_apriltag/share/sample_apriltag/cmake/: sample_apriltagConfig.cmake
robotics/sample_apriltag/launch/: sample_apriltag_v4l2.launch.py
robotics/sample_apriltag/log/: latest_build
robotics/sample_followme/: CMakeLists.txt  NOTICE  README.md  package.xml
robotics/sample_followme/include/: tracker.h
robotics/sample_followme/src/: controller.cpp
robotics/sample_followme/test/src/: main.cpp  test.cpp
robotics/simulation_remote_assistant/: README.md  package.xml  setup.cfg  setup.py
robotics/simulation_remote_assistant/config/: locations.yaml
robotics/simulation_remote_assistant/launch/: map_nav_setup.launch.py  yolo_detectcion.launch.py
robotics/simulation_remote_assistant/scripts/: map_nav_setup.py
robotics/simulation_remote_assistant/simulation_remote_assistant/: build_map_node.py  task_manager_node.py
robotics/simulation_sample_pick_and_place/: CMakeLists.txt  README.md  package.xml
robotics/simulation_sample_pick_and_place/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  rml_63.srdf  rml_63.urdf.xacro
robotics/simulation_sample_pick_and_place/launch/: simulation_sample_pick_and_place.launch.py
robotics/simulation_sample_pick_and_place/meshes/rml_63_gripper_arm/: link7.STL
robotics/simulation_sample_pick_and_place/qrb_ros_arm_bringup/: CMakeLists.txt  package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_arm_bringup/scripts/: build.sh  rml_63_gazebo_and_moveit_launch.sh
robotics/simulation_sample_pick_and_place/qrb_ros_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_arm_moveit_config/config/: initial_positions.yaml  kinematics.yaml  rml_63.ros2_control.xacro  rml_63.srdf  rml_63.urdf.xacro  ros2_controllers.yaml
robotics/simulation_sample_pick_and_place/qrb_ros_arm_moveit_config/launch/: demo.launch.py
robotics/simulation_sample_pick_and_place/qrb_ros_arm_pick_place/: CMakeLists.txt  package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_arm_pick_place/src/: qrb_ros_arm_pick_place.cpp
robotics/simulation_sample_pick_and_place/src/: qrb_ros_arm_pick_place.cpp
robotics/simulation_sample_pick_and_place/urdf/rml_63_gripper_arm/: gripper.urdf  rml_63.urdf
sample_depth_estimation/: depth_estimation_node.py
sample_face_detection/: mediapipe_face_base.py  mediapipe_face_node.py
sample_hand_detection/: README.md  hand_landmark_detector.py  hand_palm_detector.py  package.xml
sample_hrnet_pose_estimation/: hrnet_pose_estimation.py
sample_resnet101/: qrb_ros_resnet101.py
simulation_remote_assistant/: nav_preparation_node.py
simulation_sample_amr_simple_motion/: simple_motion.py
src/: main.cpp  tracker.cpp
test/: test_copyright.py  test_flake8.py  test_pep257.py
tools/: qirp-setup.sh
workflow/: README.md
(+126 files in other folders)
