<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_depth_estimation</name>
  <version>1.0.0</version>
  <description>Provide ros node depth estimator pipeline</description>
  <maintainer email="quic_tengf@quicinc.com">Teng Fan</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>qrb_ros_nn_inference</exec_depend>
  <exec_depend>qrb_ros_camera</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Test dependencies -->  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
