<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_object_detection</name>
  <version>1.0.0</version>
  <description>sample object detection with yolov8 model</description>
  <maintainer email="fulaliu@qti.qualcomm.com">Fulan Liu</maintainer>
  <license>BSD 3-Clause License</license>

  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>qrb_ros_tensor_list_msgs</exec_depend>
  <exec_depend>qrb_ros_nn_inference</exec_depend>
  <exec_depend>qrb_ros_camera</exec_depend>
  <exec_depend>ros-jazzy-qrb-ros-yolo-process</exec_depend>
  <exec_depend>ros-jazzy-qrb-ros-vision-msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
