<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_resnet101_quantized</name>
  <version>0.1.0</version>
  <description>Imagenet classifier and general purpose backbone with resnet101 model</description>
  <maintainer email="quic_fulaliu@quicinc.com">Fulan Liu</maintainer>
  <license>BSD 3-Clause License</license>

  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
