<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_resnet101</name>
  <version>0.1.2</version>
  <description>Imagenet classifier and general purpose backbone with resnet101 model</description>
  <maintainer email="fulaliu@qti.qualcomm.com">Fulan Liu</maintainer>
  <license>BSD 3-Clause License</license>

  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_python</depend>
  <depend>qrb_ros_tensor_list_msgs</depend>
  <depend>image_publisher</depend>
  <depend>qrb_ros_nn_inference</depend>
  <depend>qrb_ros_camera</depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
