<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_resnet101</name>
  <version>0.1.3</version>
  <description>Imagenet classifier and general purpose backbone with resnet101 model</description>
  <maintainer email="fulaliu@qti.qualcomm.com">Fulan Liu</maintainer>
  <license>BSD 3-Clause License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>qrb_ros_tensor_list_msgs</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>qrb_ros_nn_inference</exec_depend>
  <exec_depend>qrb_ros_camera</exec_depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
