<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_apriltag</name>
  <version>1.0.0</version>
  <description>AprilTag sample package</description>
  <maintainer email="penwang@qti.qualcomm.com">Peng Wang</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>qrb_ros_camera</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
