<?xml version="1.0"?>
<package format="3">
  <name>follow_me</name>
  <version>1.0.0</version>
  <description>QCOM AMR follow_me application ROS2 package</description>
  <maintainer email="zhezhu@qti.qualcomm.com">zhezhu</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ncnn-dev</build_depend> 

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

