<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocr_service</name>
  <version>1.0.0</version>
  <description>OCR Image process ros2 node</description>
  <maintainer email="quic_chalia@quicinc.com">Chaochen Liang</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <depend>example_interfaces</depend>
  <depend>ocr_msg</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
