<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_arm_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and basic nodes for starting myCobot robot drivers and capabilities</description>
  <maintainer email="tengf@qti.qualcomm.com">ubuntu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
